# doraemon_server

./: .env  Cargo.toml
.sqlx/: query-b92d6e8a804a1a3df84107370b61f09f041864c0a7fc3b4bf1fc8587b01dcf73.json  query-d2ae386b2f3cd6b64e0e3bdaebddd4fbf77235068b65367f6e034f60e279d96b.json
doc/: ddl.sql  dml.sql
src/: main.rs
src/biz/: vod.rs
src/db/: config.rs  error.rs  mod.rs  pool.rs
src/db/models/: mod.rs  vod.rs
