[package]
name = "doraemon_server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
# tokio:一个事件驱动的非阻塞I/O平台，用于编写异步I/O支持的应用程序。
tokio = { version = "1.43.0", features = ["full"] }
scraper = "0.13.0"
url = "2.4.0"
futures = "0.3.0"
# sqlx: 数据库链接
sqlx = { version = "0.8.3", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
"dotenv" = "0.15.0"
serde = "1.0.218"
log = "0.4.26"
thiserror = "2.0.12"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
[database.prod]
url = "mysql://doraemon:admin.123@localhost:3306/doraemon"
max_connections = 50
min_connections = 10

[database.staging]
url = "mysql://doraemon:admin.123@localhost:3306/doraemon"
max_connections = 20
